# MiCall

./: .dockerignore  .flake8  .gitignore  .mypy.ini  .project  .ruff.toml  .travis.yml  0_MPI_wrapper.py  0_MPI_wrapper.py.old  0_monitor_and_transfer.py  1_MPI_wrapper.py  1_mapping.py  1_pipeline3.py  1_pipeline3_make_prelim_sams.py  2_sam2fasta_with_base_censoring.py  2_sam2fasta_with_censoring.py  3_compress_fasta.py  3_compress_fasta_apply_min_count.py  3_compress_fasta_with_min_count.py  3_g2p_scoring.py  4_csf2counts.py  4_extractV3_G2P_from_seqs_drop_censored_reads.py  4_extractV3_with_G2P.py  4_proportion_x4.py  5_amino_freqs.py  5_determine_proportion_X4_from_V3_files.py  5_slice_counts.py  5_slice_outputs.py  AUTHORS  CONTRIBUTING.md  Dockerfile  FILTER_CONTAMINANTS.py  HACKING.md  HXB2_amino_sequences.csv  INSTALL.md  MISEQ_MONITOR.py  MISEQ_PIPELINE.py  MONITOR.py  README.md  SCHEDULER_DRIVEN_PIPELINE.py  (+131 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: build-and-test.yml
TESTS/: test_sam2fasta.py
basespace/: callbacks.js  form.json  result_report.html  result_report_no_g2p.html  summary_report.html
cfe_reference_sequences/: cfe.2.bt2  cfe.fasta.fai
docs/: .gitignore  CONTRIBUTING.md  Dockerfile  _config.yml  admin.md  basespace_upload.md  compute_micall_results.ipynb  contrib.md  contributing.md  genome_coverage.md  getting_started.md  hcv_rules.md  hcv_rules1.6.md  hcv_rules1.7.md  index.md  local_analysis.md  micall_at_bccfe.md  referenceless-stitcher-improvement-1.md  referenceless-stitcher-read-information-handling.md  steps.md  watcher-retry-system.md
docs/_data/: navigation.yml
docs/design/: assembly.md  fastq_g2p.md  remap.md  resistance.md  stitcher.md
docs/scripts/: merge_fastqs.md
docs/specs/: referenceless-stitcher-read-information-handling.md
gui/: README.md  grabber.icns  micall-icon.icns  micall.xcf
html/: editor.html  editor.js  practice.json  projects.json  scripts.js  scripts2.js  stuff.js
micall/: __main__.py  aln2counts.py  configure-projects.py  coverage_plots.py  filter_quality.py  hxb2.fasta  main.py  miseq_logging.py  project_config.py  project_scoring.json  projects.json  projects_justHIV.json  remap.py  settings_default.py
micall/alignment/: Makefile  alignment.cpp  build_alignment.sh  gotoh.cpp  gotoh2.py  setup.py
micall/blast_db/: make_blast_db.py
micall/core/: adapters_read1.fasta  adapters_read2.fasta  alignment.bundle  aln2counts.py  amplicon_finder.py  cascade_report.py  censor_fastq.py  consensus_builder.py  contig_stitcher.py  coverage_plots.py  denovo.py  filter_quality.py  merge_fastqs.py  miseq_logging.py  parse_interop.py  plot_contigs.py  plot_simple.py  prelim_map.py  primers_left.fasta  primers_left_end.fasta  primers_right.fasta  primers_right_end.fasta  primers_right_rev.fasta  project_config.py  ptrimmer_primers.txt  remap.py  sam2aln.py  sam_g2p.rb  trim_fastqs.py
micall/data/: landmark_reader.py  landmark_references.yaml  n_counts.yaml  primers_hcv_left.fasta  primers_hcv_left_end.fasta  primers_hcv_right.fasta  primers_hcv_right_end.fasta  primers_hiv-ad_left.fasta  primers_hiv-ad_left_end.fasta  primers_hiv-ad_right.fasta  primers_hiv-ad_right_end.fasta  primers_hivb_left.fasta  primers_hivb_left_end.fasta  primers_hivb_right.fasta  primers_hivb_right_end.fasta  primers_hivgha_left.fasta  primers_hivgha_left_end.fasta  primers_hivgha_right.fasta  primers_hivgha_right_end.fasta  primers_sarscov2_left.fasta  primers_sarscov2_left_end.fasta  primers_sarscov2_right.fasta  primers_sarscov2_right_end.fasta  seed_coordinates.yaml  tcr_j  tcr_v  test_samples_default.csv
micall/drivers/: run_info.py  sample.py  sample_group.py
micall/g2p/: fastq_g2p.py  g2p_fpr.txt  pssm_lib.py  pssm_lib.rb  sam_g2p.py  sam_g2p.rb
micall/gui/: micall.py
micall/hivdb/: asi_algorithm.py  genreport.py  genreport.yaml  hcv_rules.json  hcv_rules.yaml  hivdb.py  pdfreport.py
micall/monitor/: MISEQ_MONITOR.py  compare_454_samples.py  coverage_plots.R  disk_operations.py  dump_projects.py  error_metrics_parser.py  find_groups.py  kive_loader.py  (+19 more)
microtest/: 1234A-V3LOOP_S1_L001_R1_001.fastq  1234A-V3LOOP_S1_L001_R2_001.fastq  2000A-V3LOOP_S2_L001_R1_001.fastq  2000A-V3LOOP_S2_L001_R2_001.fastq  2010A-V3LOOP_S3_L001_R1_001.fastq  2010A-V3LOOP_S3_L001_R2_001.fastq  2020A-GP41_S4_L001_R1_001.fastq  2020A-GP41_S4_L001_R2_001.fastq  2020A-V3LOOP_S4_L001_R1_001.fastq  2020A-V3LOOP_S4_L001_R2_001.fastq  2030A-V3LOOP_S5_L001_R1_001.fastq  2030A-V3LOOP_S5_L001_R2_001.fastq  2040A-HLA-A_S6_L001_R1_001.fastq  2040A-HLA-A_S6_L001_R2_001.fastq  2040A-HLA-B_S6_L001_R1_001.fastq  2040A-HLA-B_S6_L001_R2_001.fastq  2050A-V3LOOP_S7_L001_R1_001.fastq  2050A-V3LOOP_S7_L001_R2_001.fastq  2060A-V3LOOP_S8_L001_R1_001.fastq  2060A-V3LOOP_S8_L001_R2_001.fastq  2070A-PR_S9_L001_R1_001.fastq  2070A-PR_S9_L001_R2_001.fastq  2080A-V3LOOP_S10_L001_R1_001.fastq  2080A-V3LOOP_S10_L001_R2_001.fastq  README.md  SampleSheet.csv  reverse_and_complement.py  translate_nuc.py
pythonlibs/: g2pScorer.py  hyphyAlign.py  pairAlign.py
reference_sequences/: aln2counts_amino_refseqs.csv  aln2nuc_refseqs.csv  cfe.2.bt2  cfe.3.bt2  cfe.4.bt2  cfe.fasta  cfe.fasta.2.bt2  cfe.fasta.3.bt2  cfe.fasta.4.bt2  cfe.fasta.rev.2.bt2  cfe.rev.2.bt2  csf2counts_amino_refseqs.csv  csf_to_fasta_by_nucref.csv
testing/: child.py  parent.py
working/: miseqpipeline MISEQ_MONITOR.py.launch  miseqpipeline csf2counts.py.launch  miseqpipeline csf2nuc.py.launch  miseqpipeline fasta_to_g2p.rb.launch  miseqpipeline prelim_map.py.launch  miseqpipeline remap.py.launch  miseqpipeline run_processor.py.launch  miseqpipeline sam2csf.py.launch  miseqpipeline sample_pipeline.py.launch  miseqpipeline-1-prelim_map.py.launch  miseqpipeline-2-remap.py.launch  miseqpipeline-3-sam2aln.py.launch  miseqpipeline-3-sam2csf.py.launch  miseqpipeline-4-aln2counts.py.launch  miseqpipeline-4-csf2counts.py.launch  miseqpipeline-5-aln2nuc.py.launch  miseqpipeline-5-csf2nuc.py.launch  miseqpipeline-run_processor.py.launch  miseqpipeline-sample_pipeline.py.launch
(+1608 files in other folders)
